@@ -969,57 +969,58 @@ SC_ACCELERATION	399
 SC_HOVERING	400
 SC_INFRAREDSCAN	401
 SC_ANALYZE	402
-SC__ENERVATION	403
-SC__GROOMY	404
-SC__IGNORANCE	405
-SC__LAZINESS	406
-SC__UNLUCKY	407
-SC__WEAKNESS	408
-SC__REPRODUCE	409
-SC__AUTOSHADOWSPELL	410
-SC__SHADOWFORM	411
-SC__STRIPACCESSORY	412
-SC__BODYPAINT	413
-SC__INVISIBILITY	414
-SC__DEADLYINFECT	415
-SC__MANHOLE	416
-SC_CHAOS	417
-SC__BLOODYLUST	418
-SC__MAELSTROM	419
-SC_GN_CARTBOOST	420
-SC_BLOODSUCKER	421
-SC_THORNSTRAP	422
-SC_SMOKEPOWDER	423
-SC_TEARGAS	424
-SC_MANDRAGORA	425
-SC_SWINGDANCE	426
-SC_SYMPHONYOFLOVER	427
-SC_MOONLITSERENADE	428
-SC_RUSHWINDMILL	429
-SC_ECHOSONG	430
-SC_HARMONIZE	431
-SC_VOICEOFSIREN	432
-SC_DEEPSLEEP	433
-SC_SIRCLEOFNATURE	434
-SC_GLOOMYDAY	435
-SC_GLOOMYDAY_SK	436
-SC_SONGOFMANA	437
-SC_SATURDAYNIGHTFEVER	438
-SC_SITDOWN_FORCE	439
-SC_DANCEWITHWUG	440
-SC_LERADSDEW	441
-SC_MELODYOFSINK	442
-SC_BEYONDOFWARCRY	443
-SC_UNLIMITEDHUMMINGVOICE	444
-SC_FIREWALK	445
-SC_ELECTRICWALK	446
-SC_WARMER	447
-SC_STRIKING	448
-SC_CRYSTALIZE	449
-//SC_REUSE_COMET	450	// Shoulden't be removed.
-SC_VENOMIMPRESS	451
-SC_HALLUCINATIONWALK	452
-//SC_HALLUCINATIONWALK_POSTDELAY	453	// Shoulden't be removed.
+SC_SHAPESHIFT	403
+SC__ENERVATION	404
+SC__GROOMY	405
+SC__IGNORANCE	406
+SC__LAZINESS	407
+SC__UNLUCKY	408
+SC__WEAKNESS	409
+SC__REPRODUCE	410
+SC__AUTOSHADOWSPELL	411
+SC__SHADOWFORM	412
+SC__STRIPACCESSORY	413
+SC__BODYPAINT	414
+SC__INVISIBILITY	415
+SC__DEADLYINFECT	416
+SC__MANHOLE	417
+SC_CHAOS	418
+SC__BLOODYLUST	419
+SC__MAELSTROM	420
+SC_GN_CARTBOOST	421
+SC_BLOODSUCKER	422
+SC_THORNSTRAP	423
+SC_SMOKEPOWDER	424
+SC_TEARGAS	425
+SC_MANDRAGORA	426
+SC_SWINGDANCE	427
+SC_SYMPHONYOFLOVER	428
+SC_MOONLITSERENADE	429
+SC_RUSHWINDMILL	430
+SC_ECHOSONG	431
+SC_HARMONIZE	432
+SC_VOICEOFSIREN	433
+SC_DEEPSLEEP	434
+SC_SIRCLEOFNATURE	435
+SC_GLOOMYDAY	436
+SC_GLOOMYDAY_SK	437
+SC_SONGOFMANA	438
+SC_SATURDAYNIGHTFEVER	439
+SC_SITDOWN_FORCE	440
+SC_DANCEWITHWUG	441
+SC_LERADSDEW	442
+SC_MELODYOFSINK	443
+SC_BEYONDOFWARCRY	444
+SC_UNLIMITEDHUMMINGVOICE	445
+SC_FIREWALK	446
+SC_ELECTRICWALK	447
+SC_WARMER	448
+SC_STRIKING	449
+SC_CRYSTALIZE	450
+//SC_REUSE_COMET	451	// Shoulden't be removed.
+SC_VENOMIMPRESS	452
+SC_HALLUCINATIONWALK	453
+//SC_HALLUCINATIONWALK_POSTDELAY	454	// Shoulden't be removed.
 
 e_gasp	0
 e_what	1
