@@ -377,6 +377,7 @@ typedef enum sc_type {
 	SC_HOVERING,
 	SC_INFRAREDSCAN,
 	SC_ANALYZE,
+	SC_SHAPESHIFT,
 
 	SC__ENERVATION,
 	SC__GROOMY,
@@ -809,7 +810,10 @@ enum si_type {
 	SI_SPHERE_3 = 365,
 	SI_SPHERE_4 = 366,
 	SI_SPHERE_5 = 367,
-// 368-371
+//	SI_MVPCARD_TAOGUNKA =  368,
+//	SI_MVPCARD_MISTRESS =  369,
+//	SI_MVPCARD_ORCHERO =  370,
+//	SI_MVPCARD_ORCLORD =  371,
 	SI_OVERHEAT_LIMITPOINT = 372,
 	SI_OVERHEAT = 373,
 	SI_SHAPESHIFT = 374,
